# Warehouse-Swarm-Intelligence-System

./: .env.example  .gitignore  QUICK_START.md  README.md  evaluation.py  evaluation_logistic.py  format.ps1  pyproject.toml  render.yaml  start.ps1  start.sh  test_configs.py  vercel.json
backend/: __init__.py
backend/agents/: base_agent.py  coordinator_agent.py  retriever_agent.py  scout_agent.py
backend/algorithms/: __init__.py  collision_avoidance.py  exploration.py  numba_core.py  pathfinding.py
backend/api/: __init__.py  main.py  session_registry.py  simulation_manager.py  telegram_notifier.py  websocket_manager.py
backend/config/: __init__.py  config_loader.py  schemas.py  settings.py
backend/core/: __init__.py  communication.py  decision_maker.py  framework.py  grid_manager.py  warehouse_model.py
backend/metrics/: __init__.py  collector.py
configs/: A.json  B.json  complex_scenario.json  pavone.json  pavone_complex.json  quad_warehouse.json  simple_scenario.json
configs/logistics/: benchmark_example.json  benchmark_full.json  manifest.json  mapd_100x100_few_border_objects25_seed42.json  mapd_100x100_few_random_objects25_seed42.json  mapd_100x100_full_border_objects25_seed42.json  mapd_100x100_full_random_objects25_seed42.json  mapd_100x100_medium_border_objects25_seed42.json  mapd_100x100_medium_random_objects25_seed42.json  mapd_50x50_few_border_objects25_seed42.json  mapd_50x50_few_random_objects25_seed42.json  (+10 more)
docs/: BENCHMARK.md  PARAMETERS.md
frontend/: .env.example  index.html  package.json  vercel.json  vite.config.ts
(+23 files in other folders)
