[project]
name = "warehouse-swarm-system"
version = "0.1.0"
description = "Multi-Agent Warehouse Object Retrieval System with Swarm Intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio>=5.11.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pathfinding>=1.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "isort>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
